--- a/ProjectLessons/Project1/Project1.csproj
+++ b/ProjectLessons/Project1/Project1.csproj
@@ -4,12 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <Compile Remove="Game.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DiceRoller.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <EmbeddedResource Include="Game.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="DiceRoller2.0">
